# chap-xai-mljar

./: MLproject  README.md  predict.py  pyproject.toml  requirements.txt  train.py
example_data/: convert_wide_to_chap.py
input/: futureClimateData.csv  trainData.csv
