[project]
name = "chap-xai-template"
version = "0.1.0"
description = "Template for a CHAP-compatible external model with native SHAP support"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "shap",
    "xgboost",
    "mljar-supervised",
]
